--- a/packages/nicer-log-remover-babel/test/index.html
+++ b/packages/nicer-log-remover-babel/test/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>nicer-log-babel-remover Test Suite</title>
+  <title>nicer-log-remover-babel Test Suite</title>
   <link rel="stylesheet" href="/qunit.css">
 </head>
 <body>
